--- a/app.json
+++ b/app.json
@@ -3,8 +3,8 @@
     "name": "demo",
     "slug": "demo",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
+   "orientation": "default",
+    "icon": "./../assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -16,6 +16,11 @@
       "supportsTablet": true
     },
     "android": {
+       "permissions": [
+    "WRITE_EXTERNAL_STORAGE",
+    "READ_EXTERNAL_STORAGE",
+    "MEDIA_LIBRARY"
+  ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
