--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "^7.1.14",
+    "axios": "^1.11.0",
+    "buffer": "^6.0.3",
     "expo": "~53.0.15",
     "expo-asset": "^11.1.7",
     "expo-document-picker": "~13.1.6",
@@ -24,6 +27,8 @@
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
+    "react-native-picker": "^4.3.7",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -31,7 +36,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "^4.0.3",
     "react-native-webview": "13.13.5",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
